--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,4 @@
+/*
 body {
 	background-color: #1BAA97;
 	display: flex;
@@ -5,10 +6,40 @@ body {
 	justify-content: center;
 	text-align: center;
 	font-family: 'Frank Ruhl Libre', serif;
+	font-family: 'Dosis';
+}
+*/
+
+/*html {
+  font-size: 10px;
+}*/
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  /*overflow: hidden;*/
+  /*width: 100vw;*/
+  /*height: 100vh;*/
+  /*color: #455A64;*/
+  color: #000000;
+  background-color: #1BAA97;
+  font-family: 'Dosis';
+  /*font-family: var(--fontFamily);
+  font-size: var(--fontSizeMd);
+  line-height: var(--lineHeightMd);*/
 }
 
 div {
 	/*border: 1px solid red;*/
+}
+
+#root {
+	width: 70%;
+	margin: 0 auto;
+	/*border: solid 2px blue;*/
 }
 
 .warning{
@@ -20,10 +51,24 @@ div {
 	margin: 0 auto;
 }
 
+.clock{
+	font-family: 'Dosis';
+	margin: 30px 0 60px 0;
+}
+
+.clock>h1 {
+	font-size: 48px;
+}
+
+.clock>h2 {
+	font-size: 60px;
+}
+
 table {
-	width: 90%;
+	width: 100%;
 	margin: 20px auto;
 	border-collapse: collapse;
+	font-size: 20px;
 }
 
 table, td, th {
@@ -31,6 +76,151 @@ table, td, th {
 	padding: 10px;
 }
 
-input {
-	margin-right: 10px;
+.removeButton {
+	padding: 10px 10px;
+	/*width: 100%;*/
+	font-family: inherit;
+	font-size: 22px;
+	border: none;
+	border-radius: 0.4rem;
+	display: inline-block;
+}
+
+.removeButton:hover {
+	box-sizing: border-box;
+  outline: none;
+  position: relative;
+  top: 3px;
+  box-shadow: 0.2rem 0.8rem 1.6rem var(--colorPrimary600);
+}
+
+/* stylings for input */
+
+:root {
+  /* generic */
+  --gutterSm: 0.4rem;
+  --gutterMd: 0.8rem;
+  --gutterLg: 1.6rem;
+  --gutterXl: 2.4rem;
+  --gutterXx: 7.2rem;
+  --colorPrimary400: #189987;
+  --colorPrimary600: #127669;
+  --colorPrimary800: #0a443c;
+  --fontFamily: "Dosis", sans-serif;
+  --fontSizeSm: 1.2rem;
+  --fontSizeMd: 1.6rem;
+  --fontSizeLg: 2.1rem;
+  --fontSizeXl: 2.8rem;
+  --fontSizeXx: 3.6rem;
+  --lineHeightSm: 1.1;
+  --lineHeightMd: 1.8;
+  --transitionDuration: 300ms;
+  --transitionTF: cubic-bezier(0.645, 0.045, 0.355, 1);
+
+  /* floated labels */
+  --inputPaddingV: var(--gutterMd);
+  --inputPaddingH: var(--gutterLg);
+  --inputFontSize: var(--fontSizeLg);
+  --inputLineHeight: var(--lineHeightMd);
+  --labelScaleFactor: 0.8;
+  --labelDefaultPosY: 50%;
+  --labelTransformedPosY: calc(
+    (var(--labelDefaultPosY)) -
+    (var(--inputPaddingV) * var(--labelScaleFactor)) -
+    (var(--inputFontSize) * var(--inputLineHeight))
+  );
+  --inputTransitionDuration: var(--transitionDuration);
+  --inputTransitionTF: var(--transitionTF);
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+.Wrapper {
+  /*flex: 0 0 80%;*/
+  max-width: 80%;
+  margin: 0 auto 40px auto;
+}
+
+.Title {
+  margin: 0 0 var(--gutterXx) 0;
+  padding: 0;
+  color: #fff;
+  font-size: var(--fontSizeXx);
+  font-weight: 400;
+  line-height: var(--lineHeightSm);
+  text-align: center;
+  text-shadow: -0.1rem 0.1rem 0.2rem var(--colorPrimary800);
+}
+
+.Input {
+  position: relative;
+}
+
+.Input-text {
+  display: block;
+  margin: 0;
+  padding: 10px 20px;
+  color: inherit;
+  width: 100%;
+  font-family: inherit;
+  font-size: 22px;
+  font-weight: inherit;
+  line-height: var(--inputLineHeight);
+  border: none;
+  border-radius: 0.4rem;
+  transition: box-shadow var(--transitionDuration);
+}
+
+.Input-text::placeholder {
+  color: #B0BEC5;
+}
+
+.Input-text:focus {
+  outline: none;
+  box-shadow: 0.2rem 0.8rem 1.6rem var(--colorPrimary600);
+}
+
+.Input-label {
+  display: block;
+  position: absolute;
+  bottom: 10%;
+  left: 1rem;
+  color: #fff;
+  font-family: inherit;
+  font-size: 28px;
+  font-weight: inherit;
+  line-height: var(--inputLineHeight);
+  opacity: 0;
+  transform:
+    translate3d(0, var(--labelDefaultPosY), 0)
+    scale(1);
+  transform-origin: 0 0;
+  transition:
+    opacity var(--inputTransitionDuration) var(--inputTransitionTF),
+    transform var(--inputTransitionDuration) var(--inputTransitionTF),
+    visibility 0ms var(--inputTransitionDuration) var(--inputTransitionTF),
+    z-index 0ms var(--inputTransitionDuration) var(--inputTransitionTF);
+}
+
+.Input-text:placeholder-shown + .Input-label {
+  visibility: hidden;
+  z-index: -1;
+}
+
+.Input-text:not(:placeholder-shown) + .Input-label,
+.Input-text:focus:not(:placeholder-shown) + .Input-label {
+  visibility: visible;
+  z-index: 1;
+  opacity: 1;
+  transform:
+    translate3d(0, var(--labelTransformedPosY), 0)
+    scale(var(--labelScaleFactor));
+  transition:
+    transform var(--inputTransitionDuration),
+    visibility 0ms,
+    z-index 0ms;
 }
