--- a/stylesheet.css
+++ b/stylesheet.css
@@ -94,7 +94,16 @@ table, td, th {
   box-shadow: 0.2rem 0.8rem 1.6rem var(--colorPrimary600);
 }
 
-/* stylings for input */
+/*
+********************
+********************
+********************
+*** styling for input
+********************
+********************
+********************
+********************
+*/
 
 :root {
   /* generic */
@@ -223,4 +232,55 @@ table, td, th {
     transform var(--inputTransitionDuration),
     visibility 0ms,
     z-index 0ms;
+}
+
+
+/*
+********************
+********************
+********************
+*** styling for drag & drop
+********************
+********************
+********************
+********************
+*/
+
+.drag-container {
+  text-align: center;
+}
+
+.head {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  background-color: #CCCCCC;
+  width:100%;
+}
+
+.droppable {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  right: 0;
+  top: 10;
+  background-color: #9E9E9E;
+  border-left: 2px dotted red;
+}
+
+.draggable {
+  width: 100px;
+  height: 100px;
+  background-color: yellow;
+  margin: 10px auto;
+}
+
+.inProgress {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  left: 0;
+  top: 10;
+  background-color: #EEEEEE;
+  border-right: 2px dotted red;
 }
